For inline code blocks in topics and replies, ensure they are vertically positioned in the middle of their respective lines of text. Fixes issue where code snippets were top-aligned based on paragraph line-height. See #2350.
git-svn-id: https://bbpress.svn.wordpress.org/trunk@5001 9866e705-20ec-0310-96e7-cbb4277adcfb

--- a/templates/default/css/bbpress.css
+++ b/templates/default/css/bbpress.css
@@ -334,6 +334,8 @@ span.bbp-author-ip {
 	padding: 0 5px;
 	overflow: scroll;
 	max-width: 95%;
+	vertical-align: middle;
+	margin-top: -3px;
 }
 
 #bbpress-forums div.bbp-topic-content pre,
